<resources>
    <string name="app_name">MyWebReviews</string>

    <string name="url_field_hint">Url</string>

    <string name="score_field_hint">score (integer 0 to 5)</string>
    <string name="notes_field_hint">Optional notes</string>
    <string name="validate_form">Send</string>

    <string name="initial_domain_view">google.com</string>
    <string name="initial_score_view">5</string>
    <string name="initial_notes_view">Need something ? Ask google !</string>

    <string name="search_button">Search</string>

    <string name="initial_website">www.google.com</string>
    <string name="go_to_web_button">go</string>
    <string name="title_activity_browser">browser</string>

    <string name="check_connection">It seems you don\'t have access to internet...</string>
    <string name="back_button">Back</string>

    <string name="test_button">test hack</string>
</resources>