<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ReviewFragment">

    <LinearLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/review_margin"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <EditText
            android:id="@+id/search_domain_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ems="10"
            android:hint="@string/url_field_hint"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0">

            <EditText
                android:id="@+id/notes_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/notes_field_hint"
                android:inputType="textLongMessage|text" />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:max="5"
            android:progress="@integer/default_rating_score"
            android:theme="@style/RatingBar" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/validate_web_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:text="@string/validate_form" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="18dp"
            android:layout_weight="0"
            android:text="@string/back_button" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <Button
            android:id="@+id/button_hack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/test_button" />

    </LinearLayout>

</LinearLayout>